# docs/swagger.json
@@ -87,6 +87,37 @@
                     }
                 }
             }
+        },
+        "/livros/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Livros"
+                ],
+                "summary": "Retrieve book by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Livros"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
